# rss-reader

./: .gitignore  CLAUDE.md  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: articles.rs  feeds.rs  mod.rs  models.rs  settings.rs
src-tauri/src/fetcher/: mod.rs  refresh.rs
src/api/: index.ts
src/components/ArticleReader/: ArticleReader.tsx
src/components/FeedList/: AddFeedModal.tsx  FeedList.tsx
src/components/Layout/: AppLayout.tsx
src/i18n/: index.ts
src/i18n/locales/en/: common.json  layout.json  reader.json  settings.json
src/i18n/locales/zh-CN/: common.json  layout.json  reader.json  settings.json
src/pages/: ArticleListPage.tsx  SettingsPage.tsx
src/styles/: article.css  design.css
src/types/: index.ts
src/utils/: logger.ts
